header section done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
-
+  <header>
+    <nav>
+      <h1 class="nav-h1">Influencer products</h1>
+      <ul>
+        <li class="li-text">Home</li>
+        <li class="li-text">Products</li>
+        <li class="li-text">Sign Up</li>
+        <li class="li-text">Log In</li>
+        <li class="search-img"><img src="./images/akar-icons_search.svg" alt=""></li>
+        <li class="cart-img"><img src="./images/clarity_shopping-cart-outline-badged.svg" alt=""></li>
+      </ul>
+    </nav>
+    <!-- Banner Section -->
+    <section class="banner-section">
+      <div class="banner-left">
+        <h1 class="banner-h1">Start your Journey as
+          Influencer</h1>
+        <p class="banner-p"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit </span><span>vestibulum
+            sed
+            scelerisque eros.Lectu faucibus.</span>
+        </p>
+        <button class="banner-btn"><span>Preebook now</span><img src="./images/arrow-forward 1.svg" alt=""></button>
+      </div>
+      <div class="banner-right">
+        <img src="./images/main-camera.png" alt="" class="banner-camera">
+      </div>
+    </section>
+  </header>
 </body>
 
 </html>
