done main company section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <!-- Banner Section -->
     <section class="banner-section">
       <div class="banner-left">
-        <h1 class="banner-h1">Start your Journey as
-          Influencer</h1>
+        <h1 class="banner-h1"><span>Start your Journey as</span>
+          <span>Influencer</span>
+        </h1>
         <p class="banner-p"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit </span><span>vestibulum
             sed
             scelerisque eros.Lectu faucibus.</span>
@@ -37,6 +38,23 @@
       </div>
     </section>
   </header>
+
+  <main>
+
+    <div class="main-company-section">
+      <hr class="hr-style">
+      <div class="image-optimize">
+        <div class="company-img i-1"><img src="./logos/Alibaba.svg" alt=""></div>
+        <div class="company-img i-2"><img src="./logos/Amazon.svg" alt=""></div>
+        <div class="company-img i-3"><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+        <div class="company-img i-4"><img src="./logos/Ebay.svg" alt=""></div>
+        <div class="company-img i-5"><img src="./logos/Rakuten.svg" alt=""></div>
+        <div class="company-img i-6"><img src="./logos/Target.svg" alt=""></div>
+        <div class="company-img i-7"><img src="./logos/Walmart.svg" alt=""></div>
+      </div>
+      <hr class="hr-style">
+    </div>
+  </main>
 </body>
 
 </html>
