--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   </header>
 
   <main>
-
-    <div class="main-company-section">
+    <!-- Main company section -->
+    <section class="main-company-section">
       <hr class="hr-style">
       <div class="image-optimize">
         <div class="company-img i-1"><img src="./logos/Alibaba.svg" alt=""></div>
@@ -53,7 +53,183 @@
         <div class="company-img i-7"><img src="./logos/Walmart.svg" alt=""></div>
       </div>
       <hr class="hr-style">
-    </div>
+    </section>
+
+    <!-- box section -->
+
+    <section class="main-body-boxes">
+      <h1 class="main-h1">Popular Collection</h1>
+
+      <div class="box-container">
+        <div class="box">
+          <img class="product-img" src="./images/tripod.png" alt="">
+          <h1 class="name">Flex Tripod</h1>
+          <p class="price">$50.48</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/mic.png" alt="">
+          <h1 class="name">Microphone</h1>
+          <p class="price">$120.25</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/airpod.png" alt="">
+          <h1 class="name">Airbuds</h1>
+          <p class="price">$100.00</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/drone.png" alt="">
+          <h1 class="name">Drone</h1>
+          <p class="price">$980.25</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/lights.png" alt="">
+          <h1 class="name">Light Setup</h1>
+          <p class="price">$1200.00</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/setup.png" alt="">
+          <h1 class="name">Photoshoot set</h1>
+          <p class="price">$820.40</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/camera.png" alt="">
+          <h1 class="name">Vlogging Camera</h1>
+          <p class="price">$1800.80</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/single-light.png" alt="">
+          <h1 class="name">Green Screen</h1>
+          <p class="price">$25.48</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+        <div class="box">
+          <img class="product-img" src="./images/action.png" alt="">
+          <h1 class="name">Action Camera</h1>
+          <p class="price">$380.00</p>
+          <div class="rating">
+            <div class="star-img">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector.svg" alt="" class="stars">
+              <img src="./images/Vector2.svg" alt="" class="stars">
+            </div>
+            <div class="rating-in-text">4.99</div>
+          </div>
+          <p class="box-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+      </div>
+      <div class="h6"><span>See More</span><span><img src="./images/Group.svg" alt=""></span></div>
+    </section>
+
+
+    <section class="main-last-section">
+
+    </section>
   </main>
 </body>
 
