done the responsive section for mobile and pc

--- a/index.html
+++ b/index.html
@@ -228,9 +228,30 @@
 
 
     <section class="main-last-section">
-
+      <div class="last-left">
+        <img class="last-img" src="./images/gear.png" alt="">
+      </div>
+      <div class="last-right">
+        <h1 class="last-h1">Featured products at one place</h1>
+        <p class="last-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+          consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        <button class="banner-btn last-btn"><span>Join Now</span><img src="./images/arrow-forward 1.svg"
+            alt=""></button>
+      </div>
     </section>
   </main>
+
+  <footer>
+    <h1 class="footer-h1">Influencer products</h1>
+    <p class="copyright">Copyright © 2020 influencer products</p>
+    <p class="rights">All rights reserved</p>
+    <div class="footer-img">
+      <img src="./images/Instagram.svg" alt="">
+      <img src="./images/Dribbble.svg" alt="" class="">
+      <img src="./images/Twitter.svg" alt="" class="">
+      <img src="./images/Youtube.svg" alt="">
+    </div>
+  </footer>
 </body>
 
 </html>
